--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "iron-icon",
   "version": "1.0.0",
   "main": "iron-icon.js",
+  "repository": {
+    "type": "git",
+    "url": "https://voloaca_octavian@bitbucket.org/cbn-it/lit-elements.git"
+  },
   "dependencies": {
     "lit-element": "2.1.0",
     "lit-html": "1.0.0"
