--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://voloaca_octavian@bitbucket.org/cbn-it/lit-elements.git"
   },
   "dependencies": {
+    "ace-builds": "^1.4.5",
     "lit-element": "2.1.0",
     "lit-html": "1.0.0",
     "moment": "2.24.0",
