--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "url": "https://voloaca_octavian@bitbucket.org/cbn-it/lit-elements.git"
   },
   "dependencies": {
-    "ace-builds": "^1.4.5",
-    "lit-element": "2.1.0",
-    "lit-html": "1.0.0",
+    "ace-builds": "1.4.8",
+    "lit-element": "2.2.1",
+    "lit-html": "1.1.2",
     "moment": "2.24.0",
-    "tiny-date-picker": "^3.2.8"
+    "tiny-date-picker": "3.2.8"
   }
 }
