--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lit-element": "2.3.1",
     "lit-html": "1.2.1",
     "moment": "2.24.0",
+    "pwa-helpers": "0.9.1",
     "tiny-date-picker": "3.2.8"
   }
 }
