--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lit-html": "1.2.1",
     "moment": "2.24.0",
     "pwa-helpers": "0.9.1",
-    "tiny-date-picker": "3.2.8"
+    "tiny-date-picker": "3.2.8",
+    "xlsx": "0.15.6"
   }
 }
