--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "build-icons": "node elements/iron-icons/build.js"
   },
   "dependencies": {
-    "ace-builds": "1.12.3",
-    "dayjs": "1.11.6",
+    "ace-builds": "1.16.0",
+    "dayjs": "1.11.7",
     "lit-element": "2.5.1",
     "lit-html": "1.4.1",
     "pwa-helpers": "0.9.1",
     "tiny-date-picker": "3.2.8",
-    "xlsx": "0.17.1"
+    "xlsx": "0.18.5",
+    "canvas2svg": "git+https://github.com/bogdan-nourescu/canvas-to-svg.git",
+    "svgo": "3.0.2"
   },
   "devDependencies": {
     "fast-xml-parser": "3.17.4"
