--- a/elements/configurator/configuratorCerc.json
+++ b/elements/configurator/configuratorCerc.json
@@ -7,41 +7,39 @@
     },
     {
       "type": "paragraph",
-      "text": "Column ",
-      "class": "col-xs-12 col-sm-2 col-lg-2",
+      "text": "Circle ",
+      "class": "col-xs-12 col-sm-2 col-lg-1",
       "style": "align-self:center;text-align:center"
-    },
-    {
-      "type": "number",
-      "dbType": "string",
-      "name": "r",
-      "label": "Radius",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
-      "min": "0",
-      "max": 25,
-      "step": 0.1,
-      "defaultValue": "0",
-      "required": true,
-      "disabled": true
     },
     {
       "type": "number",
       "dbType": "string",
       "name": "nr",
       "label": "No. Cables",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
+      "class": "col-xs-6 col-sm-2 col-lg-1",
       "min": "0",
       "max": 25,
       "defaultValue": "0",
-      "required": true,
-      "disabled": true
+      "required": true
+    },
+    {
+      "type": "number",
+      "dbType": "string",
+      "name": "r",
+      "label": "Radius",
+      "class": "col-xs-6 col-sm-2 col-lg-1",
+      "min": "0",
+      "max": 25,
+      "step": 0.1,
+      "defaultValue": "0",
+      "required": true
     },
     {
       "type": "number",
       "dbType": "string",
       "name": "hCable",
       "label": "H Cable",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
+      "class": "col-xs-6 col-sm-2 col-lg-1",
       "step": 0.1,
       "required": true,
       "disabled": true
@@ -51,16 +49,28 @@
       "dbType": "string",
       "name": "nrSenzori",
       "label": "Nr Sensors",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
+      "class": "col-xs-6 col-sm-2 col-lg-1",
       "min": "0",
       "required": true
     },
     {
       "type": "number",
       "dbType": "string",
+      "name": "rSenzorY",
+      "label": "↕ Sensor Distance",
+      "class": "col-xs-6 col-sm-2 col-lg-1",
+      "min": 0.5,
+      "max": 5,
+      "defaultValue": 1.5,
+      "step": 0.5,
+      "required": true
+    },
+    {
+      "type": "number",
+      "dbType": "string",
       "name": "above",
-      "label": "Above Grain",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
+      "label": "Above roof",
+      "class": "col-xs-6 col-sm-2 col-lg-1",
       "min": -7,
       "max": 2,
       "step": 0.1,
@@ -72,7 +82,7 @@
       "dbType": "string",
       "name": "offsetAngle",
       "label": "Angle",
-      "class": "hidden col-xs-6 col-sm-1 col-lg-1",
+      "class": "hidden col-xs-6 col-sm-2 col-lg-1",
       "min": "0",
       "max": 360,
       "step": 5,
