multi-form demo

--- a/project-config.json
+++ b/project-config.json
@@ -11,6 +11,8 @@
     "demo/demo-form-editor/demo-form-editor.html",
     "demo/demo-paper-table/demo-paper-table.html",
     "demo/demo-iron-form/demo-iron-form.html",
+    "demo/demo-iron-app/demo-iron-app.html",
+    "demo/demo-multi-form/demo-multi-form.html",
     "index.html"
   ],
   "development": {
