add demos for iron-icons with search bar

--- a/project-config.json
+++ b/project-config.json
@@ -11,6 +11,7 @@
     "demo/demo-form-editor/demo-form-editor.html",
     "demo/demo-paper-table/demo-paper-table.html",
     "demo/demo-iron-form/demo-iron-form.html",
+    "demo/demo-iron-icons/demo-iron-icons.html",
     "index.html"
   ],
   "development": {
