multi-form demo

--- a/project-config.json
+++ b/project-config.json
@@ -12,6 +12,7 @@
     "demo/demo-paper-table/demo-paper-table.html",
     "demo/demo-iron-form/demo-iron-form.html",
     "demo/demo-iron-icons/demo-iron-icons.html",
+    "demo/demo-multi-form/demo-multi-form.html",
     "index.html"
   ],
   "development": {
