--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-dev": "tsc & gulp-build build-parcel copy-static"
   },
   "dependencies": {
-    "ace-builds": "1.32.0",
+    "ace-builds": "1.32.2",
     "dayjs": "1.11.10",
     "lit": "3.1.0",
     "pwa-helpers": "0.9.1",
@@ -22,6 +22,7 @@
     "svgo": "3.0.5"
   },
   "devDependencies": {
-    "fast-xml-parser": "4.3.2"
+    "fast-xml-parser": "4.3.2",
+    "typescript": "5.3.3"
   }
 }
