--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "build-dev": "tsc & gulp-build build-parcel copy-static"
   },
   "dependencies": {
-    "ace-builds": "1.32.2",
+    "ace-builds": "1.32.3",
+    "canvas2svg": "github:bogdan-nourescu/canvas-to-svg.git",
     "dayjs": "1.11.10",
     "lit": "3.1.0",
     "pwa-helpers": "0.9.1",
-    "tiny-date-picker": "3.2.8",
-    "xlsx": "0.18.5",
-    "canvas2svg": "git+https://github.com/bogdan-nourescu/canvas-to-svg.git",
-    "svgo": "3.0.5"
+    "svgo": "3.2.0",
+    "tiny-date-picker": "github:tonymanu100/tiny-date-picker",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "fast-xml-parser": "4.3.2",
