--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "ace-builds": "1.32.3",
     "canvas2svg": "github:bogdan-nourescu/canvas-to-svg.git",
     "dayjs": "1.11.10",
-    "lit": "3.1.0",
+    "lit": "3.1.1",
     "pwa-helpers": "0.9.1",
     "svgo": "3.2.0",
     "tiny-date-picker": "github:tonymanu100/tiny-date-picker",
-    "xlsx": "0.18.5"
+    "xlsx": "0.18.5",
+    "uplot": "1.6.27"
   },
   "devDependencies": {
     "fast-xml-parser": "4.3.2",
