--- a/project-config.json
+++ b/project-config.json
@@ -14,6 +14,7 @@
     "demo/demo-iron-icons/demo-iron-icons.html",
     "demo/demo-multi-form/demo-multi-form.html",
     "demo/demo-paper-color-picker/demo-paper-color-picker.html",
+    "demo/demo-silo-3d/demo-silo-3d.html",
     "index.html"
   ],
   "development": {
@@ -28,6 +29,10 @@
     "node_modules/ace-builds/src-min-noconflict/mode-json.js",
     "node_modules/ace-builds/src-min-noconflict/worker-javascript.js",
     "node_modules/ace-builds/src-min-noconflict/worker-json.js",
-    "node_modules/ace-builds/src-min-noconflict/theme-dracula.js"
+    "node_modules/ace-builds/src-min-noconflict/theme-dracula.js",
+    "elements/siloz-webgl/shaders/*",
+    "elements/siloz-webgl/images/*",
+    "elements/siloz-webgl/fonts/*",
+    "elements/siloz-webgl/data/*"
   ]
 }
