--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.2",
     "typescript": "5.3.3"
+  },
+  "parcel-plugin-text": {
+    "extensions": [
+      "svgtxt"
+    ]
   }
 }
