--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "build-dev": "tsc & gulp-build build-parcel copy-static"
   },
   "dependencies": {
-    "ace-builds": "1.32.3",
+    "ace-builds": "1.32.5",
     "canvas2svg": "github:bogdan-nourescu/canvas-to-svg.git",
     "dayjs": "1.11.10",
-    "lit": "3.1.1",
+    "lit": "3.1.2",
     "pwa-helpers": "0.9.1",
     "svgo": "3.2.0",
     "tiny-date-picker": "github:tonymanu100/tiny-date-picker",
-    "uplot": "1.6.27",
-    "xlsx": "0.18.5"
+    "uplot": "1.6.30",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   },
   "devDependencies": {
-    "fast-xml-parser": "4.3.2",
+    "fast-xml-parser": "4.3.4",
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.2",
     "typescript": "5.3.3"
