added inputMode and pattern to paper-input

--- a/elements/configurator/configuratorCerc.json
+++ b/elements/configurator/configuratorCerc.json
@@ -13,7 +13,7 @@
     },
     {
       "type": "number",
-      "dbType": "string",
+      "dbType": "integer",
       "name": "nr",
       "label": "No. Cables",
       "class": "col-xs-6 col-sm-2 col-lg-1",
@@ -23,8 +23,8 @@
       "required": true
     },
     {
-      "type": "number",
-      "dbType": "string",
+      "type": "text",
+      "dbType": "double",
       "name": "r",
       "label": "Radius",
       "class": "col-xs-6 col-sm-2 col-lg-1",
@@ -35,8 +35,8 @@
       "required": true
     },
     {
-      "type": "number",
-      "dbType": "string",
+      "type": "text",
+      "dbType": "double",
       "name": "hCable",
       "label": "H Cable",
       "class": "col-xs-6 col-sm-2 col-lg-1",
@@ -46,7 +46,7 @@
     },
     {
       "type": "number",
-      "dbType": "string",
+      "dbType": "integer",
       "name": "nrSenzori",
       "label": "Nr Sensors",
       "class": "col-xs-6 col-sm-2 col-lg-1",
@@ -54,8 +54,8 @@
       "required": true
     },
     {
-      "type": "number",
-      "dbType": "string",
+      "type": "text",
+      "dbType": "double",
       "name": "rSenzorY",
       "label": "↕ Sensor Distance",
       "class": "col-xs-6 col-sm-2 col-lg-1",
@@ -66,8 +66,8 @@
       "required": true
     },
     {
-      "type": "number",
-      "dbType": "string",
+      "type": "text",
+      "dbType": "double",
       "name": "above",
       "label": "Above roof",
       "class": "col-xs-6 col-sm-2 col-lg-1",
@@ -79,7 +79,7 @@
     },
     {
       "type": "number",
-      "dbType": "string",
+      "dbType": "integer",
       "name": "offsetAngle",
       "label": "Angle",
       "class": "hidden col-xs-6 col-sm-2 col-lg-1",
@@ -90,8 +90,8 @@
       "required": true
     },
     {
-      "type": "number",
-      "dbType": "string",
+      "type": "text",
+      "dbType": "double",
       "name": "offsetX",
       "label": "OffsetX",
       "class": "hidden col-xs-6 col-sm-1 col-lg-1",
@@ -102,8 +102,8 @@
       "required": true
     },
     {
-      "type": "number",
-      "dbType": "string",
+      "type": "text",
+      "dbType": "double",
       "name": "offsetY",
       "label": "OffsetY",
       "class": "hidden col-xs-6 col-sm-1 col-lg-1",
