--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   },
   "devDependencies": {
-    "fast-xml-parser": "4.3.5",
-    "glslify-bundle": "^5.1.1",
-    "glslify-deps": "^1.3.2",
-    "typescript": "5.4.2"
+    "fast-xml-parser": "4.3.6",
+    "glslify-bundle": "5.1.1",
+    "glslify-deps": "1.3.2",
+    "typescript": "5.4.3"
   },
   "parcel-plugin-text": {
     "extensions": [
