--- a/elements/configurator/configuratorCerc.json
+++ b/elements/configurator/configuratorCerc.json
@@ -82,7 +82,7 @@
       "dbType": "integer",
       "name": "offsetAngle",
       "label": "Angle",
-      "class": "hidden col-xs-6 col-sm-2 col-lg-1",
+      "class": "col-xs-6 col-sm-2 col-lg-1",
       "min": "0",
       "max": 360,
       "step": 5,
@@ -94,7 +94,7 @@
       "dbType": "double",
       "name": "offsetX",
       "label": "OffsetX",
-      "class": "hidden col-xs-6 col-sm-1 col-lg-1",
+      "class": "col-xs-6 col-sm-1 col-lg-1",
       "min": -25,
       "max": 25,
       "step": 0.1,
@@ -106,7 +106,7 @@
       "dbType": "double",
       "name": "offsetY",
       "label": "OffsetY",
-      "class": "hidden col-xs-6 col-sm-1 col-lg-1",
+      "class": "col-xs-6 col-sm-1 col-lg-1",
       "min": -25,
       "max": 25,
       "step": 0.1,
