--- a/elements/configurator/configuratorSiloz.json
+++ b/elements/configurator/configuratorSiloz.json
@@ -17,8 +17,7 @@
       "label": "Gap",
       "class": "col-xs-3 col-sm-2 col-lg-1",
       "min": "1",
-      "defaultValue": 1,
-      "required": true
+      "defaultValue": 1
     },
     {
       "type": "number",
