added demo for configurator

--- a/project-config.json
+++ b/project-config.json
@@ -15,6 +15,7 @@
     "demo/demo-multi-form/demo-multi-form.html",
     "demo/demo-paper-color-picker/demo-paper-color-picker.html",
     "demo/demo-silo-3d/demo-silo-3d.html",
+    "demo/demo-configurator/demo-configurator.html",
     "index.html"
   ],
   "development": {
