renamed rSenzorY to rSensorY renamed rSenzorX to rSensorX renamed rSiloz to r renamed dSiloz to d renamed cercuri to circles renamed nrSenzori to sensorNr

--- a/elements/configurator/configuratorCerc.json
+++ b/elements/configurator/configuratorCerc.json
@@ -47,7 +47,7 @@
     {
       "type": "number",
       "dbType": "integer",
-      "name": "nrSenzori",
+      "name": "sensorNr",
       "label": "Nr Sensors",
       "class": "col-xs-6 col-sm-2 col-lg-1",
       "min": "0",
