--- a/elements/configurator/configuratorCercWarehouse.json
+++ b/elements/configurator/configuratorCercWarehouse.json
@@ -47,9 +47,9 @@
       "disabled": true
     },
     {
-      "type": "text",
+      "type": "number",
       "dbType": "integer",
-      "name": "nrSenzori",
+      "name": "sensorNr",
       "label": "Nr Sensors",
       "class": "col-xs-6 col-sm-2 col-lg-2",
       "min": "0",
