--- a/elements/configurator/configuratorWarehouse.json
+++ b/elements/configurator/configuratorWarehouse.json
@@ -15,7 +15,7 @@
       "dbType": "integer",
       "name": "pricePerT",
       "label": "Price €/t",
-      "class": "col-xs-6 col-sm-4 col-lg-2",
+      "class": "col-xs-6 col-sm-6 col-lg-2",
       "min": "0",
       "defaultValue": 200,
       "required": true
@@ -25,7 +25,7 @@
       "dbType": "string",
       "name": "siloName",
       "label": "Name",
-      "class": "col-xs-6 col-sm-8 col-lg-8",
+      "class": "col-xs-12 col-sm-12 col-lg-8",
       "required": false,
       "minLength": 3,
       "defaultValue": "Magazie 1000t"
@@ -72,7 +72,6 @@
       "defaultValue": 9,
       "required": true
     },
-
     {
       "type": "text",
       "dbType": "double",
@@ -133,9 +132,9 @@
     {
       "type": "text",
       "dbType": "double",
-      "name": "rSenzorY",
+      "name": "rSensorY",
       "label": "Vertical Sensor Distance",
-      "class": "col-xs-4 col-sm-4 col-lg-4",
+      "class": "col-xs-4 col-sm-2 col-lg-2",
       "min": "0.5",
       "max": "5",
       "defaultValue": 1.5,
@@ -146,9 +145,9 @@
     {
       "type": "text",
       "dbType": "double",
-      "name": "rSenzorX",
+      "name": "rSensorX",
       "label": "Horizontal Sensor Distance",
-      "class": "col-xs-4 col-sm-4 col-lg-4",
+      "class": "col-xs-4 col-sm-2 col-lg-2",
       "min": "0.5",
       "max": "5",
       "defaultValue": 3,
@@ -161,12 +160,26 @@
       "dbType": "double",
       "name": "floorClearance",
       "label": "Floor Clearance",
-      "class": "col-xs-4 col-sm-4 col-lg-4",
+      "class": "col-xs-4 col-sm-2 col-lg-2",
       "min": 0,
       "max": 10,
       "step": 0.5,
       "defaultValue": 1,
       "required": true
+    },
+    {
+      "type": "checkbox",
+      "label": "Reverse Rows",
+      "name": "reverseRows",
+      "dbType": "string",
+      "class": "col-xs-6 col-sm-3 col-lg-3"
+    },
+    {
+      "type": "checkbox",
+      "label": "Reverse Columns",
+      "name": "reverseColumns",
+      "dbType": "string",
+      "class": "col-xs-6 col-sm-3 col-lg-3"
     },
     {
       "type": "paragraph",
