--- a/elements/configurator/configuratorCercWarehouse.json
+++ b/elements/configurator/configuratorCercWarehouse.json
@@ -27,7 +27,7 @@
     {
       "type": "number",
       "dbType": "integer",
-      "name": "nr",
+      "name": "wireNr",
       "label": "No. Cables",
       "class": "col-xs-6 col-sm-2 col-lg-2",
       "min": "0",
