rSenzorY to rSensorY

--- a/elements/configurator/configuratorCerc.json
+++ b/elements/configurator/configuratorCerc.json
@@ -56,7 +56,7 @@
     {
       "type": "text",
       "dbType": "double",
-      "name": "rSenzorY",
+      "name": "rSensorY",
       "label": "↕ Sensor Distance",
       "class": "col-xs-6 col-sm-2 col-lg-1",
       "min": 0.5,
