--- a/elements/configurator/configuratorSiloz.json
+++ b/elements/configurator/configuratorSiloz.json
@@ -143,7 +143,7 @@
     {
       "type": "text",
       "dbType": "double",
-      "name": "rSenzorY",
+      "name": "rSensorY",
       "label": "Vertical Sensor Distance",
       "class": "hidden col-xs-6 col-sm-6 col-lg-6",
       "min": 0.5,
@@ -155,7 +155,7 @@
     {
       "type": "text",
       "dbType": "double",
-      "name": "rSenzorX",
+      "name": "rSensorX",
       "label": "Horizontal Sensor Distance",
       "class": "hidden col-xs-6 col-sm-6 col-lg-6",
       "min": 0.5,
