added concreate silos configurator

--- a/elements/configurator/configuratorCerc.json
+++ b/elements/configurator/configuratorCerc.json
@@ -8,15 +8,15 @@
     {
       "type": "paragraph",
       "text": "Circle ",
-      "class": "col-xs-12 col-sm-2 col-lg-1",
-      "style": "align-self:center;text-align:center"
+      "class": "col-xs-12 col-sm-flex-1",
+      "style": "align-self:center;text-align:center; padding:0;"
     },
     {
       "type": "number",
       "dbType": "integer",
       "name": "wireNr",
       "label": "No. Cables",
-      "class": "col-xs-6 col-sm-2 col-lg-1",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": "0",
       "max": 25,
       "defaultValue": "0",
@@ -27,7 +27,7 @@
       "dbType": "double",
       "name": "r",
       "label": "Radius",
-      "class": "col-xs-6 col-sm-2 col-lg-1",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": "0",
       "max": 25,
       "step": 0.1,
@@ -39,7 +39,7 @@
       "dbType": "double",
       "name": "hCable",
       "label": "H Cable",
-      "class": "col-xs-6 col-sm-2 col-lg-1",
+      "class": "col-xs-6 col-sm-flex-1",
       "step": 0.1,
       "required": true,
       "disabled": true
@@ -49,7 +49,7 @@
       "dbType": "integer",
       "name": "sensorNr",
       "label": "Nr Sensors",
-      "class": "col-xs-6 col-sm-2 col-lg-1",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": "0",
       "required": true
     },
@@ -58,7 +58,7 @@
       "dbType": "double",
       "name": "rSensorY",
       "label": "↕ Sensor Distance",
-      "class": "col-xs-6 col-sm-2 col-lg-1",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": 0.5,
       "max": 5,
       "defaultValue": 1.5,
@@ -70,7 +70,7 @@
       "dbType": "double",
       "name": "above",
       "label": "Above roof",
-      "class": "col-xs-6 col-sm-2 col-lg-1",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": -7,
       "max": 2,
       "step": 0.1,
@@ -82,7 +82,7 @@
       "dbType": "integer",
       "name": "offsetAngle",
       "label": "Angle",
-      "class": "col-xs-6 col-sm-2 col-lg-1",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": "0",
       "max": 360,
       "step": 5,
@@ -94,7 +94,7 @@
       "dbType": "double",
       "name": "offsetX",
       "label": "OffsetX",
-      "class": "col-xs-6 col-sm-1 col-lg-1",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": -25,
       "max": 25,
       "step": 0.1,
@@ -106,7 +106,7 @@
       "dbType": "double",
       "name": "offsetY",
       "label": "OffsetY",
-      "class": "col-xs-6 col-sm-1 col-lg-1",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": -25,
       "max": 25,
       "step": 0.1,
