--- a/elements/configurator/configuratorSiloz.json
+++ b/elements/configurator/configuratorSiloz.json
@@ -48,10 +48,12 @@
       "required": true,
       "toShow": {
         "steelSilo": [
-          "r","d"
+          "r",
+          "d"
         ],
         "circleSilo": [
-          "r","d"
+          "r",
+          "d"
         ],
         "squareSilo": [
           "width",
@@ -68,7 +70,8 @@
           "length"
         ],
         "squareSilo": [
-          "r","d"
+          "r",
+          "d"
         ]
       }
     },
@@ -79,8 +82,7 @@
       "label": "Name",
       "class": "col-xs-12 col-sm-7 col-lg-7",
       "required": false,
-      "minLength": 3,
-      "defaultValue": "Siloz 1000t"
+      "minLength": 3
     },
     {
       "type": "text",
