--- a/elements/configurator/configuratorCercWarehouse.json
+++ b/elements/configurator/configuratorCercWarehouse.json
@@ -8,7 +8,7 @@
     {
       "type": "paragraph",
       "text": "Column ",
-      "class": "col-xs-12 col-sm-2 col-lg-2",
+      "class": "col-xs-12 col-sm-flex-1",
       "style": "align-self:center;text-align:center"
     },
     {
@@ -16,7 +16,7 @@
       "dbType": "double",
       "name": "r",
       "label": "Radius",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": "0",
       "max": 25,
       "step": 0.1,
@@ -29,7 +29,7 @@
       "dbType": "integer",
       "name": "wireNr",
       "label": "No. Cables",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": "0",
       "max": 25,
       "defaultValue": "0",
@@ -41,7 +41,7 @@
       "dbType": "double",
       "name": "hCable",
       "label": "H Cable",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
+      "class": "col-xs-6 col-sm-flex-1",
       "step": 0.1,
       "required": true,
       "disabled": true
@@ -51,8 +51,20 @@
       "dbType": "integer",
       "name": "sensorNr",
       "label": "Nr Sensors",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": "0",
+      "required": true
+    },
+    {
+      "type": "text",
+      "dbType": "double",
+      "name": "rSensorY",
+      "label": "↕ Sensor Distance",
+      "class": "col-xs-6 col-sm-flex-1",
+      "min": 0.5,
+      "max": 5,
+      "defaultValue": 1.5,
+      "step": 0.5,
       "required": true
     },
     {
@@ -60,7 +72,7 @@
       "dbType": "double",
       "name": "above",
       "label": "Above Grain",
-      "class": "col-xs-6 col-sm-2 col-lg-2",
+      "class": "col-xs-6 col-sm-flex-1",
       "min": -7,
       "max": 2,
       "step": 0.1,
@@ -72,7 +84,7 @@
       "dbType": "double",
       "name": "offsetAngle",
       "label": "Angle",
-      "class": "hidden col-xs-6 col-sm-1 col-lg-1",
+      "class": "hidden col-xs-6 col-sm-flex-1",
       "min": "0",
       "max": 360,
       "step": 5,
@@ -84,7 +96,7 @@
       "dbType": "double",
       "name": "offsetX",
       "label": "OffsetX",
-      "class": "hidden col-xs-6 col-sm-1 col-lg-1",
+      "class": "hidden col-xs-6 col-sm-flex-1",
       "min": -25,
       "max": 25,
       "step": 0.1,
@@ -96,7 +108,7 @@
       "dbType": "double",
       "name": "offsetY",
       "label": "OffsetY",
-      "class": "hidden col-xs-6 col-sm-1 col-lg-1",
+      "class": "hidden col-xs-6 col-sm-flex-1",
       "min": -25,
       "max": 25,
       "step": 0.1,
