--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "1.11.11",
     "lit": "3.1.3",
     "pwa-helpers": "0.9.1",
+    "signature_pad": "^5.0.2",
     "svgo": "3.2.0",
     "tiny-date-picker": "github:tonymanu100/tiny-date-picker",
     "uplot": "1.6.30",
