--- a/project-config.json
+++ b/project-config.json
@@ -16,6 +16,7 @@
     "demo/demo-paper-color-picker/demo-paper-color-picker.html",
     "demo/demo-silo-3d/demo-silo-3d.html",
     "demo/demo-configurator/demo-configurator.html",
+    "demo/demo-paper-signature-pad/demo-paper-signature-pad.html",
     "index.html"
   ],
   "development": {
