--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "signature_pad": "^5.0.2",
     "svgo": "3.2.0",
     "tiny-date-picker": "github:tonymanu100/tiny-date-picker",
+    "trim-canvas": "^0.1.2",
     "uplot": "1.6.30",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   },
