added a new element: paper-progress-bar

--- a/project-config.json
+++ b/project-config.json
@@ -14,6 +14,7 @@
     "demo/demo-iron-icons/demo-iron-icons.html",
     "demo/demo-multi-form/demo-multi-form.html",
     "demo/demo-paper-color-picker/demo-paper-color-picker.html",
+    "demo/demo-paper-progress-bar/demo-paper-progress-bar.html",
     "demo/demo-silo-3d/demo-silo-3d.html",
     "demo/demo-configurator/demo-configurator.html",
     "demo/demo-paper-signature-pad/demo-paper-signature-pad.html",
